--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "gridsome build",
     "dev": "gridsome develop",
     "explore": "gridsome explore",
-    "forestry-preview": "yarn dev -p 8080 -H 0.0.0.0"
+    "forestry-preview": "yarn dev -p 8080 --host 0.0.0.0"
   },
   "dependencies": {
     "@gridsome/source-filesystem": "^0.5.0",
